Fix Navbar visibility on Mobil

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -68,7 +68,8 @@
   .nav {
     position: fixed;
     background-color: white;
-    opacity: 0.8;
+    opacity: 0.95;
+    z-index: 99;
   }
 
   .mobile {
@@ -76,6 +77,7 @@
     top: 2rem;
     left: 2rem;
     display: inline;
+    z-index: 100;
   }
 
   .open {
@@ -93,5 +95,6 @@
     font-weight: bold;
     font-size: 1.5rem;
     margin-right: auto;
+    z-index: 100;
   }
 }
